--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,20 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="PC hardware"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
     <title>My shop - Curto</title>
   </head>
-  <body>
+  <body style="background-color: rgb(49, 49, 49)">
+    
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
 
@@ -24,9 +29,9 @@
     <script src="static.jsx"></script>
     <script src="app.jsx"></script>
     <script src="index.jsx"></script>
-    <script src="Header.jsx"></script>
-    <script src="Main.jsx"></script>
-    <script src="Footer.jsx"></script>
+    <script src="header.jsx"></script>
+    <script src="main.jsx"></script>
+    <script src="footer.jsx"></script>
     <script src="components/NavBar.jsx"></script>
     
 
